Fixed various issues; background image would repeat on larger screens, calendar would not size to window, alert notice was hidden behind navbar, company photo listed junk information instead of file name in company index page, changed color scheme to be more pleasing to view, changed about me section styling, changed contact form styling

--- a/app/assets/stylesheets/global_style.scss
+++ b/app/assets/stylesheets/global_style.scss
@@ -1,4 +1,5 @@
 body{
+  padding-top: 55px;
   font-size: large;
   margin: 0px;
 }
