--- a/app/assets/stylesheets/home_pages.scss
+++ b/app/assets/stylesheets/home_pages.scss
@@ -3,8 +3,8 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 body{
-    color: #FFFFFF;
-    background-color:#500000;
+    color: black;
+    background-color:#D6D3C4;
 }
 
 p {
@@ -22,8 +22,11 @@ p {
 
 #about {
   min-height: 30vh;
-  background-color:ghostwhite;
-  color:black;
+  background-color:#3C0000;
+  color:white;
+  width: 70vw;
+  border-radius: 25px;
+  margin-top: 50px;
 }
 
 #alumni {
